Fix title bleed and update links

--- a/static/css/pages/whitepaper.css
+++ b/static/css/pages/whitepaper.css
@@ -146,3 +146,14 @@ main section.whitepaper-container h1, main section.whitepaper-container h2 {
   font-size: 50%;
   vertical-align: super;
 }
+
+@media (max-width: 768px) { 
+  .whitepaper-hero {
+    background-size: contain;
+  }
+
+  .whitepaper-hero h1.title {
+    margin-bottom: auto;
+    margin-top: 0;
+  }
+}
